# screenase

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  deploy-hf-space.yml  release.yml
.streamlit/: config.toml
deploy/hf-space/: Dockerfile  README.md  requirements.txt
docs/: benchling_mapping.md  design_rationale.md  tutorial.md  walkthrough.ipynb
docs/examples/: README.md
docs/examples/analyze/: analysis_report.md
docs/examples/benchling/: entry_schema.json  request_schema.json  result_schema.json
docs/examples/ccd/: ivt_bench_sheet.html  ivt_screen.csv  ivt_screen_coded.csv
docs/examples/flat/: ivt_bench_sheet.html  ivt_screen.csv  plate_layout.csv
docs/examples/optimize/: optimum.md  optimum_bench_sheet.html
docs/examples/project/: project.yaml
docs/examples/schedule/: schedule.csv
docs/examples/tutorial/: tutorial.ipynb
examples/: analysis_report.md  benchling_request.json  config.yaml  ivt_bench_sheet.html  ivt_screen_coded.csv  results_simulated.csv
src/screenase/: __init__.py  __main__.py  analyze.py  automation.py  bench_sheet.py  cli.py  config.py  design.py  diagnostics.py  multiresponse.py  narrate.py  plate.py  project.py  scheduling.py  serve.py  share.py  tutorial.py  volumes.py
src/screenase/benchling/: README.md  __init__.py  (+5 more)
tests/: conftest.py  test_analyze.py  test_automation.py  test_bench_sheet.py  test_bench_sheet_hypothesis.py  test_benchling.py  test_ccd.py  test_cli.py  test_design.py  test_design_hypothesis.py  test_diagnostics.py  test_multiresponse.py  test_narrate.py  test_optimize.py  test_pb.py  test_plate.py  test_project.py  test_scheduling.py  test_schemas.py  test_serve.py  test_share.py  test_streamlit_smoke.py  test_tutorial.py  test_volumes.py  test_volumes_hypothesis.py
(+6 files in other folders)
